# TestLibZ

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniUtils.h  native-lib.cpp  web_task.cpp  web_task.h
app/src/main/cpp/include/curl/: curl.h
app/src/main/java/com/xiao/testlibz/: MainActivity.java  NativeLib.java  NativeRequestListener.java  NativeTask.java  NativeTaskImpl.java  NetworkApp.java
app/src/main/java/com/xiao/testlibz/task/: AbstractNativeTask.java  NativeLib.java  NativeRequestClient.java  NativeResp.java  NativeTask.java  NativeTaskImpl.java  RequestResp.java  RequestWorker.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
